# qrtool-ui

./: README.md  pyproject.toml
qrtool-ui/: ui.py
